--- a/roles/generate_kubemanifests/tasks/main.yml
+++ b/roles/generate_kubemanifests/tasks/main.yml
@@ -6,18 +6,20 @@
     automationhub is defined or
     eda is defined or
     secrets is defined or
-    configmaps is defined
+    configmaps is defined or
+    operatorgroups is defined or
+    subscriptions is defined
   block:
     - name: Empty the generated templates directory, if it exists
       ansible.builtin.file:
-        path: "{{ generate_kubemanifests_template_dir }}"
+        path: "{{ generate_kubemanifests_template_host_dir }}"
         state: absent
       when: generate_kubemanifests_template_empty | bool
 
     - name: Create the generated templates directory
       ansible.builtin.file:
         mode: '0775'
-        path: "{{ generate_kubemanifests_template_dir }}"
+        path: "{{ generate_kubemanifests_template_host_dir }}"
         state: directory
 
 - name: Handle the crs directory creation
@@ -30,7 +32,7 @@
     - name: Create the generated crs directory
       ansible.builtin.file:
         mode: '0775'
-        path: "{{ generate_kubemanifests_template_dir }}/crs"
+        path: "{{ generate_kubemanifests_template_host_dir }}/crs"
         state: directory
 
 - name: Handle the configmaps directory creation
@@ -39,7 +41,7 @@
     - name: Create the generated configmaps directory
       ansible.builtin.file:
         mode: '0775'
-        path: "{{ generate_kubemanifests_template_dir }}/configmaps"
+        path: "{{ generate_kubemanifests_template_host_dir }}/configmaps"
         state: directory
 
 - name: Handle the routes directory creation
@@ -48,7 +50,7 @@
     - name: Create the generated routes directory
       ansible.builtin.file:
         mode: '0775'
-        path: "{{ generate_kubemanifests_template_dir }}/routes"
+        path: "{{ generate_kubemanifests_template_host_dir }}/routes"
         state: directory
 
 - name: Handle the secrets directory creation
@@ -57,7 +59,7 @@
     - name: Create the generated secrets directory
       ansible.builtin.file:
         mode: '0775'
-        path: "{{ generate_kubemanifests_template_dir }}/secrets"
+        path: "{{ generate_kubemanifests_template_host_dir }}/secrets"
         state: directory
 
 - name: Handle the subscriptions directory creation
@@ -66,7 +68,7 @@
     - name: Create the generated subscriptions directory
       ansible.builtin.file:
         mode: '0775'
-        path: "{{ generate_kubemanifests_template_dir }}/subscriptions"
+        path: "{{ generate_kubemanifests_template_group_dir }}/subscriptions"
         state: directory
 
 - name: Handle the operatorgroups directory creation
@@ -75,7 +77,7 @@
     - name: Create the generated operatorgroups directory
       ansible.builtin.file:
         mode: '0775'
-        path: "{{ generate_kubemanifests_template_dir }}/operatorgroups"
+        path: "{{ generate_kubemanifests_template_group_dir }}/operatorgroups"
         state: directory
 
 - name: Handle the pvcs directory creation
@@ -84,7 +86,7 @@
     - name: Create the generated pvcs directory
       ansible.builtin.file:
         mode: '0775'
-        path: "{{ generate_kubemanifests_template_dir }}/pvcs"
+        path: "{{ generate_kubemanifests_template_host_dir }}/pvcs"
         state: directory
 
 - name: Template ansibleautomationplatform.yml
@@ -96,7 +98,7 @@
         combine(ansibleautomationplatform, recursive=true) |
         to_nice_yaml(2)
       }}
-    dest: "{{ generate_kubemanifests_template_dir }}/crs/ansibleautomationplatform.yml"
+    dest: "{{ generate_kubemanifests_template_host_dir }}/crs/ansibleautomationplatform.yml"
     mode: '0644'
   when: ansibleautomationplatform is defined and ansibleautomationplatform
 
@@ -109,7 +111,7 @@
         combine(automationcontroller, recursive=true) |
         to_nice_yaml(2)
       }}
-    dest: "{{ generate_kubemanifests_template_dir }}/crs/automationcontroller.yml"
+    dest: "{{ generate_kubemanifests_template_host_dir }}/crs/automationcontroller.yml"
     mode: '0644'
   when: automationcontroller is defined and automationcontroller
 
@@ -122,7 +124,7 @@
         combine(automationhub, recursive=true) |
         to_nice_yaml(2)
       }}
-    dest: "{{ generate_kubemanifests_template_dir }}/crs/automationhub.yml"
+    dest: "{{ generate_kubemanifests_template_host_dir }}/crs/automationhub.yml"
     mode: '0644'
   when: automationhub is defined and automationhub
 
@@ -135,7 +137,7 @@
         combine(eda, recursive=true) |
         to_nice_yaml(2)
       }}
-    dest: "{{ generate_kubemanifests_template_dir }}/crs/eda.yml"
+    dest: "{{ generate_kubemanifests_template_host_dir }}/crs/eda.yml"
     mode: '0644'
   when: eda is defined and eda
 
@@ -147,7 +149,7 @@
         from_yaml |
         to_nice_yaml(indent=2, sort_keys=false)
       }}
-    dest: "{{ generate_kubemanifests_template_dir }}/configmaps/{{ item.metadata.name }}.yml"
+    dest: "{{ generate_kubemanifests_template_host_dir }}/configmaps/{{ item.metadata.name }}.yml"
     mode: '0644'
   loop: "{{ configmaps }}"
   when: configmaps is defined and configmaps
@@ -161,7 +163,7 @@
         combine(item, recursive=true) |
         to_nice_yaml(indent=2, sort_keys=false)
       }}
-    dest: "{{ generate_kubemanifests_template_dir }}/pvcs/{{ item.metadata.name }}.yml"
+    dest: "{{ generate_kubemanifests_template_host_dir }}/pvcs/{{ item.metadata.name }}.yml"
     mode: '0644'
   loop: "{{ pvcs }}"
   when: pvcs is defined and pvcs
@@ -175,7 +177,7 @@
         combine(item, recursive=true) |
         to_nice_yaml(indent=2, sort_keys=false)
       }}
-    dest: "{{ generate_kubemanifests_template_dir }}/routes/{{ item.metadata.name }}.yml"
+    dest: "{{ generate_kubemanifests_template_host_dir }}/routes/{{ item.metadata.name }}.yml"
     mode: '0644'
   loop: "{{ routes }}"
   when: routes is defined and routes
@@ -188,7 +190,7 @@
         from_yaml |
         to_nice_yaml(indent=2, sort_keys=false)
       }}
-    dest: "{{ generate_kubemanifests_template_dir }}/secrets/{{ item.metadata.name }}.yml"
+    dest: "{{ generate_kubemanifests_template_host_dir }}/secrets/{{ item.metadata.name }}.yml"
     mode: '0644'
   loop: "{{ secrets }}"
   no_log: true
@@ -203,7 +205,7 @@
         combine(item, recursive=true) |
         to_nice_yaml(indent=2, sort_keys=false)
       }}
-    dest: "{{ generate_kubemanifests_template_dir }}/subscriptions/{{ item.metadata.name }}.yml"
+    dest: "{{ generate_kubemanifests_template_group_dir }}/subscriptions/{{ item.metadata.name }}.yml"
     mode: '0644'
   loop: "{{ subscriptions }}"
   when: subscriptions is defined and subscriptions
@@ -217,7 +219,7 @@
         combine(item, recursive=true) |
         to_nice_yaml(indent=2, sort_keys=false)
       }}
-    dest: "{{ generate_kubemanifests_template_dir }}/operatorgroups/{{ item.metadata.name }}.yml"
+    dest: "{{ generate_kubemanifests_template_group_dir }}/operatorgroups/{{ item.metadata.name }}.yml"
     mode: '0644'
   loop: "{{ operatorgroups }}"
   when: operatorgroups is defined and operatorgroups
