Use apply:true with kubernetes.core.k8s to update existing resources properly

--- a/roles/manage_kubemanifests/tasks/manage_kubemanifest.yml
+++ b/roles/manage_kubemanifests/tasks/manage_kubemanifest.yml
@@ -12,6 +12,7 @@
 
 - name: "Manage {{ manage_kubemanifests_object.kind | lower }}/{{ manage_kubemanifests_object.metadata.name }} -n {{ manage_kubemanifests_object.metadata.namespace }}"
   kubernetes.core.k8s:
+    apply: true
     state: "{{ manage_kubemanifests_state }}"
     src: "{{ item }}"
     wait: true
